[GitHub Actions] Use large for cdc-debezium-source

--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -154,7 +154,6 @@ jobs:
           GH_ARC_PRIVATE_KEY: ${{ secrets.GH_ARC_PRIVATE_KEY }}
           GH_ARC_PAT: ${{ secrets.GH_ARC_PAT }}
   core:
-#    runs-on: ubuntu-latest
     runs-on: 'stream-ci-large'
     needs:
       - parameters
@@ -243,10 +242,8 @@ jobs:
       - scale-runners-up
     strategy:
       fail-fast: false
-#      max-parallel: 4
       matrix:
         app: ${{ fromJson(needs.parameters.outputs.processors) }}
-#    runs-on: 'ubuntu-latest'
     runs-on: 'stream-ci'
     steps:
       - name: 'Configure: checkout stream-applications'
@@ -313,11 +310,9 @@ jobs:
       - parameters
       - scale-runners-up
     strategy:
-#      max-parallel: 4
       fail-fast: false
       matrix:
         app: ${{ fromJson(needs.parameters.outputs.sinks) }}
-#    runs-on: 'ubuntu-latest'
     runs-on: 'stream-ci'
     steps:
       - name: 'Configure: checkout stream-applications'
@@ -384,13 +379,11 @@ jobs:
       - parameters
       - scale-runners-up
     strategy:
-#      max-parallel: 4
       fail-fast: false
       # will be removed when private runners are used.
       matrix:
         app: ${{ fromJson(needs.parameters.outputs.sources) }}
-#    runs-on: 'ubuntu-latest'
-    runs-on: 'stream-ci'
+    runs-on: ${{ matrix.app == 'cdc-debezium-source' && 'stream-ci-large' || 'stream-ci' }}
     steps:
       - name: 'Configure: checkout stream-applications'
         uses: actions/checkout@v3
