--- a/applications/sink/pom.xml
+++ b/applications/sink/pom.xml
@@ -12,26 +12,27 @@
     <modules>
         <module>analytics-sink</module>
         <module>cassandra-sink</module>
+        <module>elasticsearch-sink</module>
         <module>file-sink</module>
         <module>ftp-sink</module>
+        <module>jdbc-sink</module>
         <module>log-sink</module>
         <module>mongodb-sink</module>
         <module>mqtt-sink</module>
-        <module>jdbc-sink</module>
-        <module>redis-sink</module>
+        <module>pgcopy-sink</module>
         <module>rabbit-sink</module>
+        <module>redis-sink</module>
         <module>router-sink</module>
-        <module>sftp-sink</module>
+        <module>rsocket-sink</module>
         <module>s3-sink</module>
+        <module>sftp-sink</module>
         <module>tcp-sink</module>
         <module>throughput-sink</module>
-        <module>websocket-sink</module>
-        <module>twitter-update-sink</module>
         <module>twitter-message-sink</module>
+        <module>twitter-update-sink</module>
         <module>wavefront-sink</module>
-        <module>pgcopy-sink</module>
-        <module>rsocket-sink</module>
-        <module>elasticsearch-sink</module>
+        <module>websocket-sink</module>
+        <module>xmpp-sink</module>
         <module>zeromq-sink</module>
     </modules>
     <build>
