--- a/functions/function/aggregator-function/pom.xml
+++ b/functions/function/aggregator-function/pom.xml
@@ -15,6 +15,10 @@
     <description>Spring Native Function for Aggregator</description>
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.integration</groupId>
+            <artifactId>spring-integration-core</artifactId>
+        </dependency>
         <!--MongoDb-->
         <dependency>
             <groupId>org.springframework.integration</groupId>
