--- a/stream-applications-build/pom.xml
+++ b/stream-applications-build/pom.xml
@@ -33,12 +33,12 @@
 		<nohttp-checkstyle.version>0.0.10</nohttp-checkstyle.version>
 		<disable.nohttp.checks>true</disable.nohttp.checks>
 		<spring-javaformat-checkstyle.version>0.0.35</spring-javaformat-checkstyle.version>
-		<spring-boot.version>3.0.0-SNAPSHOT</spring-boot.version>
+		<spring-boot.version>3.0.0-M3</spring-boot.version>
 		<spring-kafka.version>3.0.0-SNAPSHOT</spring-kafka.version>
 		<spring-rabbit.version>3.0.0-SNAPSHOT</spring-rabbit.version>
-		<spring-integration.version>6.0.0-SNAPSHOT</spring-integration.version>
 		<spring-geode.version>1.6.7</spring-geode.version>
-		<spring-cloud.version>2022.0.0-SNAPSHOT</spring-cloud.version>
+		<spring-cloud.version>2022.0.0-M5</spring-cloud.version>
+		<spring-framework.version>6.0.0-M4</spring-framework.version>
 		<spring-cloud-starters.version>4.0.0-SNAPSHOT</spring-cloud-starters.version>
 		<spring-cloud-function.version>4.0.0-SNAPSHOT</spring-cloud-function.version>
 		<spring-cloud-stream-dependencies.version>4.0.0-SNAPSHOT</spring-cloud-stream-dependencies.version>
@@ -77,6 +77,13 @@
 				<type>pom</type>
 			</dependency>
 			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-dependencies</artifactId>
+				<version>${spring-cloud.version}</version>
+				<scope>import</scope>
+				<type>pom</type>
+			</dependency>
+			<dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-dependencies</artifactId>
 				<version>${spring-boot.version}</version>
@@ -108,6 +115,37 @@
 				<groupId>jakarta.jms</groupId>
 				<artifactId>jakarta.jms-api</artifactId>
 				<version>${jakarta-jms.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-core</artifactId>
+				<version>${spring-framework.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.integration</groupId>
+				<artifactId>spring-integration-core</artifactId>
+				<version>${spring-framework.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.integration</groupId>
+				<artifactId>spring-integration-hazelcast</artifactId>
+				<version>${spring-framework.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.integration</groupId>
+				<artifactId>spring-integration-cassandra</artifactId>
+				<!-- TODO fix version  -->
+				<version>6.0.0-SNAPSHOT</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.integration</groupId>
+				<artifactId>spring-integration-mongodb</artifactId>
+				<version>${spring-framework.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.integration</groupId>
+				<artifactId>spring-integration-zookeeper</artifactId>
+				<version>${spring-framework.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
