--- a/.github/workflows/ci-pr.yml
+++ b/.github/workflows/ci-pr.yml
@@ -6,6 +6,8 @@ on:
       - main
       - 2021.1.x
 
+env:
+  MAIN_PATH: '../build-dir'
 jobs:
   check:
     runs-on: 'stream-ci-large'
@@ -13,9 +15,11 @@ jobs:
       - name: 'Configure: checkout stream-applications@${{ github.ref }}'
         uses: actions/checkout@v3
       - name: 'Configure: checkout stream-applications@main'
+        id: checkout-main
         uses: actions/checkout@v3
         with:
-          ref: 'build-dir'
+          ref: 'main'
+          path: ${{ env.MAIN_PATH }}
       - name: 'Configure: Ensure scripts are executable'
         shell: bash
         run: find . -type f -name "*.sh" -exec chmod a+x '{}' \;
@@ -48,20 +52,27 @@ jobs:
         env:
           VERBOSE: ${{ github.debug && 'true' || '' }}
         run: |
-          BUILD_DIR=$(realpath build-dir)
+          BUILD_DIR=$(realpath $MAIN_PATH)          
           MAVEN_OPT="-U -B -T 1C -s $ROOT_DIR/.settings.xml ${{ inputs.verbose && '--debug' || '' }}"
           echo "::notice ::building - stream-applications-build"
-          set -e
+          set +e
           $BUILD_DIR/build-folder.sh stream-applications-build
-          set +e
+          RC=$?
+          if ((RC!=0)); then
+            exit $RC
+          fi
           echo "::notice ::building - functions"
-          set -e
           $BUILD_DIR/build-folder.sh functions
-          set +e
+          RC=$?
+          if ((RC!=0)); then
+            exit $RC
+          fi
           echo "::notice ::building - stream-applications-core"
-          set -e
           $BUILD_DIR/build-folder.sh applications/stream-applications-core
-          set +e
+          RC=$?
+          if ((RC!=0)); then
+            exit $RC
+          fi
           echo "::notice ::core build completed"
       - name: 'Configure: get changed files'
         id: changed-files
@@ -71,7 +82,7 @@ jobs:
         env:
           VERBOSE: ${{ github.debug && 'true' || '' }}
         run: |
-          $BUILD_DIR=$(realpath build-dir)
+          BUILD_DIR=$(realpath $MAIN_PATH)
           $BUILD_DIR/create-matrices.sh
           $BUILD_DIR/scripts/determine-modules-changed.sh "${{ steps.changed-files.outputs.all_changed_files }}"
           MODULES=$(jq '.[]' modules.json | sed 's/\"//g')
@@ -87,4 +98,9 @@ jobs:
             fi
           done
           echo "::info ::verify $FOLDERS"
+          set +e
           $BUILD_DIR/build-folder.sh $FOLDERS install verify -amd
+          RC=$?
+          if ((RC!=0)); then
+            exit $RC
+          fi
