--- a/.github/actions/install-xsltproc/action.yml
+++ b/.github/actions/install-xsltproc/action.yml
@@ -7,5 +7,5 @@ runs:
     - name: 'Install xsltproc'
       shell: bash
       run: |
-        sudo apt-get update -y
+        sudo apt-get update -q -y
         sudo apt-get install -q -y xsltproc
