--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -205,13 +205,9 @@ jobs:
           ROOT_DIR=$(realpath $PWD)
           MAVEN_OPT="-U -B -T 1C -s $ROOT_DIR/.settings.xml ${{ inputs.verbose && '--debug' || '' }}"
           pushd stream-applications > /dev/null
-          echo "::notice ::building - stream-applications-build"
+          echo "::notice ::building - stream-applications-build,functions,applications/stream-applications-core"
           set -e
-          $ROOT_DIR/build-folder.sh stream-applications-build deploy
-          echo "::notice ::building - functions"
-          $ROOT_DIR/build-folder.sh functions deploy
-          echo "::notice ::building - stream-applications-core"
-          $ROOT_DIR/build-folder.sh applications/stream-applications-core
+          $ROOT_DIR/build-folder.sh stream-applications-build,functions,applications/stream-applications-core deploy
           set +e
           echo "::notice ::core build completed"
           popd > /dev/null
