[Github Actions] Don't run housekeeping on user branches

--- a/.github/workflows/clean-housekeeping.yml
+++ b/.github/workflows/clean-housekeeping.yml
@@ -5,6 +5,7 @@ on:
 
 jobs:
   clean:
+    if: github.repository == 'spring-cloud/stream-applications'
     runs-on: ubuntu-latest
     concurrency:
       group: housekeeping
