Remove all remnants of Geode

--- a/applications/processor/aggregator-processor/src/main/resources/META-INF/dataflow-configuration-metadata-whitelist.properties
+++ b/applications/processor/aggregator-processor/src/main/resources/META-INF/dataflow-configuration-metadata-whitelist.properties
@@ -2,7 +2,4 @@ configuration-properties.classes=org.springframework.cloud.fn.aggregator.Aggrega
   org.springframework.boot.autoconfigure.mongo.MongoProperties,\
   org.springframework.boot.autoconfigure.mongo.embedded.EmbeddedMongoProperties,\
   org.springframework.boot.autoconfigure.data.redis.RedisProperties,\
-  org.springframework.boot.autoconfigure.jdbc.DataSourceProperties,\
-  org.springframework.geode.boot.autoconfigure.configuration.GemFireProperties
-
-
+  org.springframework.boot.autoconfigure.jdbc.DataSourceProperties
