--- a/stream-applications-build/pom.xml
+++ b/stream-applications-build/pom.xml
@@ -148,10 +148,10 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven-surefire-plugin.version}</version>
                 <configuration>
+                    <parallel>classes</parallel>
                     <redirectTestOutputToFile>true</redirectTestOutputToFile>
                 </configuration>
             </plugin>
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
@@ -323,7 +323,9 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
+                        <version>${maven-surefire-plugin.version}</version>
                         <configuration>
+                            <parallel>classes</parallel>
                             <excludedGroups>integration</excludedGroups>
                         </configuration>
                     </plugin>
@@ -337,7 +339,9 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
+                        <version>${maven-surefire-plugin.version}</version>
                         <configuration>
+                            <parallel>classes</parallel>
                             <groups>integration</groups>
                         </configuration>
                     </plugin>
@@ -360,7 +364,7 @@
                 <plugins>
                     <plugin>
                         <artifactId>maven-gpg-plugin</artifactId>
-                        <version>1.6</version>
+                        <version>1.6</version> <!-- TODO test with latest: 3.0.1 -->
                         <executions>
                             <execution>
                                 <id>sign-artifacts</id>
