--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -26,7 +26,7 @@ on:
       GH_ARC_PAT:
 
 env:
-  VERBOSE: ${{ inputs.verbose && 'true' || '' }}
+  VERBOSE: ${{ (github.debug || inputs.verbose) && 'true' || '' }}
   BRANCH: ${{ inputs.branch }}
 
 jobs:
