--- a/.github/actions/increase-runners/action.yml
+++ b/.github/actions/increase-runners/action.yml
@@ -16,5 +16,6 @@ runs:
       shell: bash
       run: |
         source ./scripts/kubeconfig-runners.sh
-        ./scripts/increase-runners.sh ${{ inputs.inc }} ${{ inputs.max }}
-        echo "::notice ::Increased runners with ${{ inputs.inc }}"
+        INC=$((11 * ${{ inputs.inc }} / 10))
+        ./scripts/increase-runners.sh $INC ${{ inputs.max }}
+        echo "::notice ::Increased runners with $INC"
