--- a/scripts/k8s/runners-stream-ci-auto.yaml
+++ b/scripts/k8s/runners-stream-ci-auto.yaml
@@ -18,7 +18,7 @@ spec:
       resources:
         requests:
           cpu: "1500m"
-          memory: "2Gi"
+          memory: "1536Mi"
       labels:
         - stream-ci
 ---
