--- a/scripts/k8s/runners-stream-ci-manual-template.yaml
+++ b/scripts/k8s/runners-stream-ci-manual-template.yaml
@@ -19,6 +19,6 @@ spec:
       resources:
         requests:
           cpu: "1500m"
-          memory: "2Gi"
+          memory: "1536Mi"
       labels:
         - stream-ci
