--- a/stream-applications-build/pom.xml
+++ b/stream-applications-build/pom.xml
@@ -12,20 +12,20 @@
 
 	<properties>
 		<java.version>1.8</java.version>
-		<maven-javadoc-plugin.version>3.3.0</maven-javadoc-plugin.version>
+        <maven-javadoc-plugin.version>3.3.1</maven-javadoc-plugin.version>
 		<maven-source-plugin.version>3.2.1</maven-source-plugin.version>
-		<maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
+        <maven-surefire-plugin.version>3.0.0-M7</maven-surefire-plugin.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
-		<maven-source-plugin.version>3.0.1</maven-source-plugin.version>
-		<maven-checkstyle-plugin.version>3.1.0</maven-checkstyle-plugin.version>
+        <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
+        <maven-checkstyle-plugin.version>3.2.0</maven-checkstyle-plugin.version>
 		<disable.checks>false</disable.checks>
 		<maven-checkstyle-plugin.failsOnError>true</maven-checkstyle-plugin.failsOnError>
 		<maven-checkstyle-plugin.failOnViolation>true</maven-checkstyle-plugin.failOnViolation>
 		<maven-checkstyle-plugin.includeTestSourceDirectory>true</maven-checkstyle-plugin.includeTestSourceDirectory>
-		<puppycrawl-tools-checkstyle.version>8.29</puppycrawl-tools-checkstyle.version>
+        <puppycrawl-tools-checkstyle.version>10.3.4</puppycrawl-tools-checkstyle.version>
 		<checkstyle.location>https://raw.githubusercontent.com/spring-cloud/stream-applications/master/etc/checkstyle
 		</checkstyle.location>
 		<checkstyle.suppressions.file>
@@ -39,7 +39,7 @@
 		</checkstyle.additional.suppressions.file>
 		<nohttp-checkstyle.version>0.0.2.RELEASE</nohttp-checkstyle.version>
 		<disable.nohttp.checks>true</disable.nohttp.checks>
-		<spring-javaformat-checkstyle.version>0.0.7</spring-javaformat-checkstyle.version>
+		<spring-javaformat-checkstyle.version>0.0.35</spring-javaformat-checkstyle.version>
 		<spring-boot.version>2.6.8</spring-boot.version>
 		<spring-kafka.version>2.8.6</spring-kafka.version>
 		<spring-rabbit.version>2.4.5</spring-rabbit.version>
@@ -51,7 +51,6 @@
 		<spring-cloud-stream.version>3.2.6-SNAPSHOT</spring-cloud-stream.version>
 		<test-containers.version>1.16.3</test-containers.version>
 		<maven-flatten-plugin.version>1.2.5</maven-flatten-plugin.version>
-		<maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
 		<mockserver.version>5.13.2</mockserver.version>
 	</properties>
 	<url>https://spring.io/projects/spring-cloud-stream-applications</url>
