--- a/functions/consumer/elasticsearch-consumer/pom.xml
+++ b/functions/consumer/elasticsearch-consumer/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <properties>
-        <elasticsearch.version>7.15.2</elasticsearch.version>
+        <elasticsearch.version>8.5.0</elasticsearch.version>
     </properties>
 
     <artifactId>elasticsearch-consumer</artifactId>
@@ -19,13 +19,8 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.elasticsearch</groupId>
-            <artifactId>elasticsearch</artifactId>
-            <version>${elasticsearch.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.elasticsearch.client</groupId>
-            <artifactId>elasticsearch-rest-high-level-client</artifactId>
+            <groupId>co.elastic.clients</groupId>
+            <artifactId>elasticsearch-java</artifactId>
             <version>${elasticsearch.version}</version>
         </dependency>
         <dependency>
