Update test-binder dependency. Added elasticsearch-x-content.

--- a/applications/sink/rabbit-sink/pom.xml
+++ b/applications/sink/rabbit-sink/pom.xml
@@ -31,10 +31,8 @@
         </dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-stream</artifactId>
-			<type>test-jar</type>
-			<scope>test</scope>
-			<classifier>test-binder</classifier>
+            <artifactId>spring-cloud-stream-test-binder</artifactId>
+            <scope>test</scope>
 		</dependency>
         <dependency>
             <groupId>org.testcontainers</groupId>
